# page-turner

backend/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4d9a54d76964_fix_book_index.py  5f1f0ac16c95_initial_data_base.py  c429d0188318_initial_data_base.py
backend/app/api/: deps.py  main.py
backend/app/api/v1/: auth.py  book.py  quote.py  user.py
backend/app/app/auth/: application.py  domain.py  dtos.py  port.py
backend/app/app/auth/infraestructure/: postgres.py
backend/app/app/book/: application.py  domain.py  dtos.py  port.py
backend/app/app/book/infraestructure/: postgres.py
backend/app/app/quote/: application.py  domain.py  dtos.py  port.py
backend/app/app/quote/infraestructure/: postgres.py
backend/app/app/user/: application.py  domain.py  dtos.py  port.py
backend/app/app/user/infraestructure/: postgres.py
backend/app/core/: config.py  security.py  sqlmodel_models.py
backend/app/shared/: schemas.py  sqlmodel_models.py
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/assets/: BookOpen.jsx  Quote.jsx  User.jsx
frontend/src/components/: AddBook.jsx  AddQuote.jsx  Book.jsx  BookList.jsx  FinishedBook.jsx  FinishedBookList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/core/: Background.jsx
frontend/src/modules/Login/: Login.jsx
frontend/src/modules/Private/: Private.jsx
frontend/src/modules/Private/Home/: Home.jsx
frontend/src/utils/: AuthGuard.jsx  RoutesWithNotFound.jsx  routes.jsx
(+5 files in other folders)
